# safe-bo-coupled-tank-control

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: engineering_audit.md
results/ablation/: deployment_gate_ablation.csv  deployment_gate_ablation.json  trust_region_ablation.csv  trust_region_ablation.json
results/final/: qualified_controllers.csv  summary.csv  summary.json  trials.csv  validation.csv
src/safebo_tanks/: __init__.py  ablation.py  demo.py  deployment_ablation.py  experiment.py  optimization.py  plant.py  space.py
tests/: test_ablation.py  test_demo.py  test_deployment_ablation.py  test_experiment.py  test_optimization.py  test_plant.py  test_space.py
